--- a/notebooks/clintai.ipynb
+++ b/notebooks/clintai.ipynb
@@ -1,77 +1,74 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "a20871d8-4994-487d-b18d-421819ba5afb",
+   "cell_type": "markdown",
+   "id": "bc6a83c6-0281-4d46-a373-7f95fe2752e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on method clintai in module birdy.client.base:\n",
-      "\n",
-      "clintai(dataset=None, data_type='tas') method of birdy.client.base.WPSClient instance\n",
-      "    Fills the gaps in your uploaded dataset.\n",
-      "    \n",
-      "    Parameters\n",
-      "    ----------\n",
-      "    dataset : ComplexData:mimetype:`application/x-netcdf`\n",
-      "        Enter a URL pointing to a NetCDF file.\n",
-      "    data_type : {'tas'}string\n",
-      "        Choose data type.\n",
-      "    \n",
-      "    Returns\n",
-      "    -------\n",
-      "    output : ComplexData:mimetype:`application/x-netcdf`\n",
-      "        NetCDF Output produced by ClintAI.\n",
-      "    mask : ComplexData:mimetype:`application/x-netcdf`\n",
-      "        NetCDF Mask produced by ClintAI.\n",
-      "\n"
-     ]
-    }
-   ],
+   "source": [
+    "# ClintAI service demo\n",
+    "\n",
+    "Using the Smart Duck service:\n",
+    "https://github.com/FREVA-CLINT/duck\n",
+    "\n",
+    "Infilling with trained AI model for climate data (hadcrut, temperature) done with ClintAI:\n",
+    "https://github.com/FREVA-CLINT/climatereconstructionAI/tree/clint"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10b5b04e-7bc9-44d9-8cbc-6e3e1fae9694",
+   "metadata": {},
+   "source": [
+    "## Using the birdy client to access the duck service\n",
+    "https://github.com/bird-house/birdy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28faf3d0-16ae-46c2-b01f-aeaed1fe941f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from birdy import WPSClient\n",
-    "url = \"http://127.0.0.1:5000/wps?Service=WPS&Request=GetCapabilities&Version=1.0.0\"\n",
+    "url = \"http://localhost:5000/wps?Service=WPS&Request=GetCapabilities&Version=1.0.0\"\n",
     "wps = WPSClient(url, verify=False)\n",
     "help(wps.clintai)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e9ef6df3-60f2-4b6b-b5cc-d968bab10682",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<birdy.client.utils.WPSExecution object at 0x111dc9d90>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "clintaiResponse(\n",
-       "    output='http://localhost:5000/outputs/64f1732e-93e0-11ec-be74-acde48001122/demo_output.nc',\n",
-       "    mask='http://localhost:5000/outputs/64f1732e-93e0-11ec-be74-acde48001122/demo_mask.nc'\n",
-       ")"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "resp = wps.clintai(\n",
-    "    dataset=\"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_187709_189308.nc\", \n",
+    "    #dataset=\"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_187709_189308.nc\", \n",
+    "    dataset=\"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_185001-201812.nc\", \n",
     "    data_type='tas')\n",
-    "print(resp)\n",
-    "resp.get()"
+    "resp.status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b140c61-997c-4f82-8da2-3865b99c2d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = resp.get(asobj=True)[0]\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3424ce60-8158-4ce5-9204-95467133e512",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds.tas.isel(time=0).plot()"
    ]
   }
  ],
