--- a/notebooks/clintai.ipynb
+++ b/notebooks/clintai.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "from birdy import WPSClient\n",
     "url = \"http://localhost:5000/wps?Service=WPS&Request=GetCapabilities&Version=1.0.0\"\n",
-    "wps = WPSClient(url, verify=False)\n",
+    "wps = WPSClient(url, verify=False, progress=False)\n",
     "help(wps.clintai)"
    ]
   },
@@ -88,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
