updated tas param

--- a/notebooks/clintai.ipynb
+++ b/notebooks/clintai.ipynb
@@ -46,7 +46,7 @@
     "resp = wps.clintai(\n",
     "    #dataset=\"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_187709_189308.nc\", \n",
     "    dataset=\"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_185001-201812.nc\", \n",
-    "    data_type='tas')\n",
+    "    data_type='Near Surface Air Temperature')\n",
     "resp.status"
    ]
   },
