update duck notebook

--- a/notebooks/smartduck.ipynb
+++ b/notebooks/smartduck.ipynb
@@ -5,13 +5,19 @@
    "id": "bc6a83c6-0281-4d46-a373-7f95fe2752e1",
    "metadata": {},
    "source": [
-    "# ClintAI service demo\n",
+    "# ClintAI service demo on smart duck\n",
     "\n",
-    "Using the Smart Duck service:\n",
+    "Using the Duck service:\n",
     "https://github.com/FREVA-CLINT/duck\n",
     "\n",
     "Infilling with trained AI model for climate data (hadcrut, temperature) done with ClintAI:\n",
-    "https://github.com/FREVA-CLINT/climatereconstructionAI/tree/clint"
+    "https://github.com/FREVA-CLINT/climatereconstructionAI/tree/clint\n",
+    "\n",
+    "Running on smartduck VM:\n",
+    "smartduck.cloud.dkrz.de\n",
+    "\n",
+    "You can also use the Phoenix WebApp:\n",
+    "https://bovec.dkrz.de/\n"
    ]
   },
   {
@@ -31,7 +37,8 @@
    "outputs": [],
    "source": [
     "from birdy import WPSClient\n",
-    "url = \"http://localhost:5000/wps?Service=WPS&Request=GetCapabilities&Version=1.0.0\"\n",
+    "#url = \"http://localhost:5000/wps?Service=WPS&Request=GetCapabilities&Version=1.0.0\"\n",
+    "url = \"http://smartduck.cloud.dkrz.de:5000/wps\"\n",
     "wps = WPSClient(url, verify=False, progress=False)\n",
     "help(wps.clintai)"
    ]
