updated hadcrut params

--- a/notebooks/smartduck.ipynb
+++ b/notebooks/smartduck.ipynb
@@ -10,8 +10,12 @@
     "Using the Duck service:\n",
     "https://github.com/FREVA-CLINT/duck\n",
     "\n",
-    "Infilling with trained AI model for climate data (hadcrut, temperature) done with ClintAI:\n",
+    "Infilling with trained AI model for climate data (HadCRUT) done with ClintAI:\n",
     "https://github.com/FREVA-CLINT/climatereconstructionAI/tree/clint\n",
+    "\n",
+    "Model is trained for HadCRUT data:\n",
+    "* https://www.metoffice.gov.uk/hadobs/hadcrut5/\n",
+    "* https://www.metoffice.gov.uk/hadobs/hadcrut4/index.html\n",
     "\n",
     "Running on smartduck VM:\n",
     "smartduck.cloud.dkrz.de\n",
@@ -37,10 +41,22 @@
    "outputs": [],
    "source": [
     "from birdy import WPSClient\n",
-    "#url = \"http://localhost:5000/wps?Service=WPS&Request=GetCapabilities&Version=1.0.0\"\n",
-    "url = \"http://smartduck.cloud.dkrz.de:5000/wps\"\n",
+    "url = \"http://localhost:5000/wps\"\n",
+    "# url = \"http://smartduck.cloud.dkrz.de:5000/wps\"\n",
     "wps = WPSClient(url, verify=False, progress=False)\n",
     "help(wps.clintai)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e7f6c24-4998-44f7-95df-a7261ca3b607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HadCRUT5 = \"https://www.metoffice.gov.uk/hadobs/hadcrut5/data/current/non-infilled/HadCRUT.5.0.1.0.anomalies.ensemble_mean.nc\"\n",
+    "HadCRUT4 = \"https://www.metoffice.gov.uk/hadobs/hadcrut4/data/current/gridded_fields/HadCRUT.4.6.0.0.median_netcdf.zip\"\n",
+    "HadCRUT = \"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_185001-201812.nc\"\n"
    ]
   },
   {
@@ -51,9 +67,8 @@
    "outputs": [],
    "source": [
     "resp = wps.clintai(\n",
-    "    #dataset=\"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_187709_189308.nc\", \n",
-    "    dataset=\"https://github.com/FREVA-CLINT/climatereconstructionAI/raw/clint/demo/inputs/test_large/tas_hadcrut_185001-201812.nc\", \n",
-    "    data_type='Near Surface Air Temperature')\n",
+    "    dataset=HadCRUT, \n",
+    "    hadcrut=\"HadCRUT\")\n",
     "resp.status"
    ]
   },
