Update description text

--- a/notebooks/smartduck.ipynb
+++ b/notebooks/smartduck.ipynb
@@ -5,12 +5,12 @@
    "id": "bc6a83c6-0281-4d46-a373-7f95fe2752e1",
    "metadata": {},
    "source": [
-    "# ClintAI service demo on smart duck\n",
+    "# CRAI service demo on smart duck\n",
     "\n",
     "Using the Duck service:\n",
     "https://github.com/FREVA-CLINT/duck\n",
     "\n",
-    "Infilling with trained AI model for climate data (HadCRUT) done with ClintAI:\n",
+    "Infilling with trained AI model for climate data (HadCRUT) done with CRAI:\n",
     "https://github.com/FREVA-CLINT/climatereconstructionAI/tree/clint\n",
     "\n",
     "Model is trained for HadCRUT data:\n",
@@ -110,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
